syntax = "proto3";

package sd_backend.health_guide_content;

message HealthGuideContent {
  int32 id = 1;
  int32 type_one = 2;
  string type_two = 3;
  string content = 4; // JSON string
}

message HealthGuideContentRequest {
  int32 type_one = 1;
  string type_two = 2;
  string content = 3; // JSON string
}

message HealthGuideContentResponse {
  repeated HealthGuideContent health_guide_contents = 1;
  int32 code = 2;
  string message = 3;
}

